fix(header): change wide menu z-index to show tooltip

--- a/src/components/HeaderAuthenticated/CustomWideMenu.scss
+++ b/src/components/HeaderAuthenticated/CustomWideMenu.scss
@@ -57,7 +57,7 @@
   transition: visibility 0.24s cubic-bezier(0.2, 0, 0.38, 0.9) 0s;
 
   &[expanded="true"] {
-    z-index: 8000;
+    z-index: 9;
     display: flex;
     flex-direction: column;
     background-color: transparent;
